fixed wrap on quote authors

--- a/components/scss/partials/_app.scss
+++ b/components/scss/partials/_app.scss
@@ -47,6 +47,7 @@ blockquote {
     span {
         font-weight: bold;
         margin-left: 10px;
+        white-space: nowrap;
     }
 }
 
